--- a/src/popup.html
+++ b/src/popup.html
@@ -14,10 +14,7 @@
     <div class="grid grid-flow-row place-items-center gap-2 p-6">
       <img id="mtab-logo" src="./assets/icon.png" class="aspect-square w-36" alt="logo" />
       <p class="text-4xl font-semibold text-white">mtab</p>
-      <button
-        id="options-button"
-        class="w-40 cursor-pointer rounded-md bg-emerald-500 px-2 py-1 duration-300 ease-in-out hover:bg-emerald-600"
-      >
+      <button id="options-button" class="w-40 cursor-pointer rounded-md bg-emerald-500 px-2 py-1 duration-300 ease-in-out hover:bg-emerald-600">
         <span class="m-0 text-2xl text-white">options</span>
       </button>
     </div>
