--- a/src/index.html
+++ b/src/index.html
@@ -11,60 +11,25 @@
     <script src="newtab/scripts/init.ts" type="module" defer></script>
   </head>
 
-  <body
-    dir="ltr"
-    class="grid min-h-screen place-items-center overflow-x-hidden overflow-y-scroll bg-neutral-500"
-  >
+  <body dir="ltr" class="grid min-h-screen place-items-center overflow-x-hidden overflow-y-scroll bg-neutral-500">
     <div id="wallpaper" class="fixed top-0 z-[-1] h-screen w-screen"></div>
-    <div
-      id="content"
-      class="m-padding-bottom top-distance absolute grid w-[95%] max-w-[50rem] place-items-center gap-2 md:w-[80%]"
-    >
+    <div id="content" class="m-padding-bottom top-distance absolute grid w-[95%] max-w-[50rem] place-items-center gap-2 md:w-[80%]">
       <div class="grid w-full grid-flow-row place-items-center gap-2 md:gap-4">
-        <p
-          id="message"
-          class="font-message text-center text-2xl font-semibold text-white md:text-4xl lg:text-6xl"
-        ></p>
+        <p id="message" class="font-message text-center text-2xl font-semibold text-white md:text-4xl lg:text-6xl"></p>
         <section id="search-section" class="grid w-full grid-flow-row place-items-center gap-2">
-          <div
-            id="search-container"
-            class="font-search corner-style grid w-full grid-cols-[max-content_auto] border-2 border-transparent p-1 text-base opacity-0 md:p-2 md:text-2xl"
-          >
+          <div id="search-container" class="font-search corner-style grid w-full grid-cols-[max-content_auto] border-2 border-transparent p-1 text-base opacity-0 md:p-2 md:text-2xl">
             <span class="search-search-icon-color select-none font-semibold">->&nbsp;</span>
-            <input
-              id="search-input"
-              type="text"
-              autocomplete="off"
-              class="font-search placeholder-color-search bg-transparent outline-none"
-            />
+            <input id="search-input" type="text" autocomplete="off" class="font-search placeholder-color-search bg-transparent outline-none" />
           </div>
-          <div
-            id="assistant-container"
-            class="font-search corner-style hidden w-full grid-flow-row gap-2 p-2 text-base md:text-2xl"
-          ></div>
+          <div id="assistant-container" class="font-search corner-style hidden w-full grid-flow-row gap-2 p-2 text-base md:text-2xl"></div>
           <div id="bookmarks-container"></div>
         </section>
-        <section
-          id="bookmark-search-section"
-          class="hidden w-full grid-flow-row place-items-center gap-2"
-        >
-          <div
-            id="bookmark-search-container"
-            class="font-search corner-style grid w-full grid-cols-[max-content_auto] border-2 border-transparent p-1 text-base md:p-2 md:text-2xl"
-          >
+        <section id="bookmark-search-section" class="hidden w-full grid-flow-row place-items-center gap-2">
+          <div id="bookmark-search-container" class="font-search corner-style grid w-full grid-cols-[max-content_auto] border-2 border-transparent p-1 text-base md:p-2 md:text-2xl">
             <span class="search-bookmark-icon-color select-none font-semibold">//&nbsp;</span>
-            <input
-              id="bookmark-search-input"
-              type="text"
-              autocomplete="off"
-              class="font-bookmark-search placeholder-color-bookmark-search bg-transparent outline-none"
-            />
+            <input id="bookmark-search-input" type="text" autocomplete="off" class="font-bookmark-search placeholder-color-bookmark-search bg-transparent outline-none" />
           </div>
-          <div
-            id="bookmarks-search-results-container"
-            class="font-bookmark-search-results corner-style grid w-full grid-flow-row gap-2 p-2 text-base md:text-2xl"
-            selected-index="0"
-          ></div>
+          <div id="bookmarks-search-results-container" class="font-bookmark-search-results corner-style grid w-full grid-flow-row gap-2 p-2 text-base md:text-2xl" selected-index="0"></div>
         </section>
       </div>
     </div>
