--- a/src/options.html
+++ b/src/options.html
@@ -808,9 +808,12 @@
                 <span class="text-base text-white">collapse all</span>
               </button>
               <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-2"></div>
-              <div>
-                <button id="bookmarks-user-defined-add-button" class="w-full cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
+              <div class="grid grid-cols-2 gap-2">
+                <button id="bookmarks-user-defined-add-bookmark-button" class="w-full cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
                   <span class="text-base text-white">add bookmark</span>
+                </button>
+                <button id="bookmarks-user-defined-add-folder-button" class="w-full cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
+                  <span class="text-base text-white">add folder</span>
                 </button>
               </div>
             </div>
