add kagi to search engines (#54)

--- a/src/options.html
+++ b/src/options.html
@@ -583,6 +583,12 @@
                     <span class="text-white">ecosia</span>
                   </div>
                 </button>
+                <button id="search-engine-kagi-button" class="grid place-items-center rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <div class="grid grid-cols-[24px_max-content] gap-2">
+                    <img src="assets/search-engines/kagi.png" alt="ecosia" />
+                    <span class="text-white">kagi</span>
+                  </div>
+                </button>
               </div>
             </div>
             <div class="grid gap-2">
