improve options ui

--- a/src/options.html
+++ b/src/options.html
@@ -755,7 +755,8 @@
               </button>
             </div>
           </div>
-          <div id="bookmarks-user-defined-or-default-blocky-section">
+          <div id="bookmarks-user-defined-or-default-blocky-section" class="grid grid-flow-row gap-4">
+            <p class="text-base text-neutral-500">tip: Ctrl click or Middle click to open bookmark in a new tab</p>
             <div class="grid gap-2 text-base">
               <div class="grid w-full grid-cols-[max-content_auto] place-items-center">
                 <p class="text-base text-white">bookmarks.showBookmarkNames</p>
