add link to discord

--- a/src/options.html
+++ b/src/options.html
@@ -926,6 +926,9 @@
     <!-- <3 -->
     <div class="px-2 py-4">
       <p class="text-center text-base text-white">Made with ❤️ by Max Hu et al.</p>
+      <p class="text-center text-base text-white">
+        Join the <a href="https://maxhu.dev/redirect/discord/mtab" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">Discord</a> 🚀
+      </p>
     </div>
   </body>
 </html>
