--- a/src/options.html
+++ b/src/options.html
@@ -802,26 +802,28 @@
                 <span class="text-indigo-500">remixicon:</span>
                 <br />
                 Find available icon types at
-                <a href="https://remixicon.com" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600"> remixicon.com </a> (using v4.5.0) <br />
-                Remix icon types should be formatted as <span class="text-sky-500">ri-...</span>
+                <a href="https://remixicon.com" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600"> remixicon.com </a> (using v4.5.0)
+                <br />
+                remixicon icon types should be formatted as <span class="text-sky-500">ri-...</span>
               </p>
               <p class="text-neutral-500">
                 <span class="text-indigo-500">nerdfonts:</span><br />
                 You can also use Nerd Font icons. Check the cheat sheet at
                 <a href="https://www.nerdfonts.com/cheat-sheet" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600"> nerdfonts.com</a> <br />
-                Nerd font icon types should be formatted as <span class="text-sky-500">nf-...</span>
+                nerdfont icon types should be formatted as <span class="text-sky-500">nf-...</span>
               </p>
               <p class="text-neutral-500">
                 <span class="text-indigo-500">fontawesome:</span>
                 <br />
                 Find available icon types at
-                <a href="https://fontawesome.com/search" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600"> fontawesome.com </a> (using v6.7.1) <br />
-                Remix icon types should be formatted as <span class="text-sky-500">fa-... fa-...</span>
+                <a href="https://fontawesome.com/search" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600"> fontawesome.com </a> (using v6.7.1)
+                <br />
+                fontawesome icon types should be formatted as <span class="text-sky-500">fa-... fa-...</span>
               </p>
               <p class="text-neutral-500">
                 <span class="text-indigo-500">url:</span><br />
-                You can use URLs as icon types<br />
-                URL icon types should be formatted as <span class="text-sky-500">url-https://...</span>
+                You can use URLs as icon types (right click & copy image address)<br />
+                url icon types should be formatted as <span class="text-sky-500">url-https://...</span>
               </p>
               <br />
               <button id="bookmarks-user-defined-toggle-collapse-all-button" class="w-full cursor-pointer rounded-md bg-neutral-500 p-2 transition hover:bg-neutral-600" last-action="expand">
