--- a/src/options.html
+++ b/src/options.html
@@ -182,6 +182,9 @@
                 <button id="message-type-time-24-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">time-24</span>
                 </button>
+                <button id="message-type-weather-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">weather</span>
+                </button>
                 <button id="message-type-custom-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">custom</span>
                 </button>
