improve loading wallpaper transition

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
     <script src="newtab/scripts/init.ts" type="module" defer></script>
   </head>
 
-  <body dir="ltr" class="grid min-h-screen place-items-center overflow-x-hidden overflow-y-scroll bg-neutral-500">
+  <body dir="ltr" class="grid min-h-screen place-items-center overflow-x-hidden overflow-y-scroll bg-black">
+    <div id="cover" class="fixed left-0 top-0 h-screen w-screen bg-black"></div>
     <div id="wallpaper" class="fixed top-0 z-[-1] h-screen w-screen"></div>
     <div id="content" class="m-padding-bottom top-distance absolute grid w-[95%] max-w-[50rem] place-items-center gap-2 md:w-[80%]">
       <div class="grid w-full grid-flow-row place-items-center gap-2 md:gap-4">
