add message text size option

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div id="wallpaper" class="fixed top-0 z-[-1] h-screen w-screen"></div>
     <div id="content" class="m-padding-bottom top-distance absolute grid w-[95%] max-w-[50rem] place-items-center gap-2 md:w-[80%]">
       <div class="grid w-full grid-flow-row place-items-center gap-2 md:gap-4">
-        <p id="message" class="font-message text-center text-2xl font-semibold text-white md:text-4xl lg:text-6xl"></p>
+        <p id="message" class="font-message text-size-message text-center font-semibold text-white"></p>
         <section id="search-section" class="grid w-full grid-flow-row place-items-center gap-2">
           <div id="search-container" class="font-search corner-style grid w-full grid-cols-[max-content_auto] border-2 border-transparent p-1 text-base opacity-0 md:p-2 md:text-2xl">
             <span class="search-search-icon-color select-none font-semibold">->&nbsp;</span>
