--- a/src/options.html
+++ b/src/options.html
@@ -171,7 +171,7 @@
               <p class="text-base text-white">message.textSize</p>
               <div id="message-text-size-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
-                <input id="message-text-size-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input size..." />
+                <input id="message-text-size-input" type="number" step="any" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input size..." />
               </div>
             </div>
             <div class="grid gap-2 text-base">
