add ability to use simpleicons (#58)

--- a/src/options.html
+++ b/src/options.html
@@ -851,6 +851,14 @@
                 fontawesome icon types should be formatted as <span class="text-sky-500">fa-... fa-...</span>
               </p>
               <p class="text-neutral-500">
+                <span class="text-indigo-500">simpleicons:</span>
+                <br />
+                Find available icon types at
+                <a href="https://icon-sets.iconify.design/simple-icons" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">icon-sets.iconify.design</a>
+                <br />
+                simpleicons icon types should be formatted as <span class="text-sky-500">si-...</span>
+              </p>
+              <p class="text-neutral-500">
                 <span class="text-indigo-500">url:</span><br />
                 You can use URLs as icon types (right click & copy image address)<br />
                 url icon types should be formatted as <span class="text-sky-500">url-https://...</span>
