--- a/src/options.html
+++ b/src/options.html
@@ -271,6 +271,7 @@
               </div>
               <div id="wallpaper-file-upload-section">
                 <div class="grid gap-2">
+                  <p class="text-base text-neutral-500">note: the fileUpload wallpaper is not included when exporting and importing configs due to taking too much space</p>
                   <p class="text-base text-white">wallpaper.fileUpload</p>
                   <div class="grid grid-cols-2 gap-2">
                     <input
