--- a/src/options.html
+++ b/src/options.html
@@ -855,7 +855,7 @@
                 <span class="text-indigo-500">simpleicons:</span>
                 <br />
                 Find available icon types at
-                <a href="https://icon-sets.iconify.design/simple-icons" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">icon-sets.iconify.design</a>
+                <a href="https://icones.js.org/collection/simple-icons" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">icones.js.org</a>
                 <br />
                 simpleicons icon types should be formatted as <span class="text-sky-500">si-...</span>
               </p>
