--- a/src/options.html
+++ b/src/options.html
@@ -104,6 +104,7 @@
           <div class="grid">
             <div id="title-custom-favicon-upload-section">
               <div class="grid gap-2">
+                <p class="text-base text-neutral-500">note: the customFavicon is not included when exporting and importing configs due to taking too much space</p>
                 <p class="text-base text-white">title.customFavicon</p>
                 <div class="grid grid-cols-2 gap-2">
                   <input type="file" id="title-custom-favicon-upload" accept="image/*" class="w-full cursor-pointer rounded-md bg-cyan-500 p-2 text-base text-white transition hover:bg-cyan-600" />
