--- a/src/options.html
+++ b/src/options.html
@@ -261,8 +261,8 @@
               </div>
             </div>
             <div class="grid">
-              <div class="grid gap-2">
-                <div id="wallpaper-url-section">
+              <div id="wallpaper-url-section">
+                <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.url</p>
                   <div id="wallpaper-url-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                     <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
@@ -287,6 +287,22 @@
                   </div>
                   <p class="text-base text-neutral-500">live preview</p>
                   <div id="live-wallpaper-preview" class="grid aspect-video w-64 place-items-center overflow-hidden rounded-md bg-neutral-800"></div>
+                  <div class="grid gap-2">
+                    <p class="text-base text-neutral-500">
+                      note: this determines the resolution to which mtab resizes your uploaded wallpaper, set it to match your screen dimensions for best results.
+                    </p>
+                    <p class="text-base text-white">wallpaper.resize</p>
+                    <div class="grid grid-cols-2 gap-2">
+                      <div id="wallpaper-resize-w-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                        <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                        <input id="wallpaper-resize-w-input" type="number" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input width..." />
+                      </div>
+                      <div id="wallpaper-resize-h-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                        <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                        <input id="wallpaper-resize-h-input" type="number" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input height..." />
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
