improve options page

--- a/src/options.html
+++ b/src/options.html
@@ -289,7 +289,7 @@
                   <div id="live-wallpaper-preview" class="grid aspect-video w-64 place-items-center overflow-hidden rounded-md bg-neutral-800"></div>
                   <div class="grid gap-2">
                     <p class="text-base text-neutral-500">
-                      note: this determines the resolution to which mtab resizes your uploaded wallpaper, set it to match your screen dimensions for best results.
+                      note: this determines the resolution to which mtab resizes your uploaded wallpaper, set it to match your screen dimensions for the best performance
                     </p>
                     <p class="text-base text-white">wallpaper.resize</p>
                     <div class="grid grid-cols-2 gap-2">
@@ -830,7 +830,7 @@
                   </label>
                 </div>
               </div>
-              <p class="text-neutral-500">enabling numberKeys -> makes it so that pressing 1 opens first bookmark, 2 opens second bookmark, and so on</p>
+              <p class="text-neutral-500">enabling numberKeys -> makes it so that pressing 1 opens first bookmark, 2 opens second bookmark, and so on (0 activates the back button)</p>
             </div>
           </div>
           <div id="bookmarks-user-defined-section">
