--- a/src/options.html
+++ b/src/options.html
@@ -963,6 +963,33 @@
             </div>
           </div>
         </section>
+        <!-- extra -->
+        <section class="grid grid-flow-row gap-4">
+          <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
+            <div class="my-auto h-[1px] rounded-md bg-neutral-500"></div>
+            <span class="text-base text-neutral-500">extra</span>
+            <div class="my-auto h-[1px] rounded-md bg-neutral-500"></div>
+          </div>
+          <div class="grid gap-2 text-base">
+            <p class="text-white">extra.snow.enabled</p>
+            <p class="text-base text-neutral-500">
+              fun snow effect
+              <br />
+              winter mode enables snow during december
+            </p>
+            <div class="grid grid-cols-2 gap-2">
+              <button id="extra-snow-enabled-on-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                <span class="text-white">on</span>
+              </button>
+              <button id="extra-snow-enabled-winter-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                <span class="text-white">winter</span>
+              </button>
+              <button id="extra-snow-enabled-off-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                <span class="text-white">off</span>
+              </button>
+            </div>
+          </div>
+        </section>
       </main>
       <!-- save buttons and more -->
       <div class="mb-12 mt-20 grid grid-flow-row place-items-center gap-4 py-4">
